syntax = "proto3";

package file;

option go_package = "src/proto";

service FileService {
  rpc UploadImage(UploadImageRequest) returns (UploadImageResponse){}
  rpc UploadFile(UploadFileRequest) returns(UploadFileResponse) {}
  rpc GetSignedUrl(GetSignedUrlRequest) returns (GetSignedUrlResponse) {}
}

// Upload Image

message UploadImageRequest{
  string filename = 1;
  bytes data = 2;
  string userId = 3;
  int32 tag = 4;
}

message UploadImageResponse{
  string url = 1;
}

// Upload File

message UploadFileRequest{
  string filename = 1;
  bytes data = 2;
  string userId = 3;
  int32 tag = 4;
}

message UploadFileResponse{
  string url = 1;
}

// Get Signed Url

message GetSignedUrlRequest{
  string userId = 1;
}

message GetSignedUrlResponse{
  string url = 1;
}
