syntax = "proto3";

package group;

option go_package = "src/proto";

service GroupService {
  rpc FindOne(FindOneGroupRequest) returns (FindOneGroupResponse) {}
  rpc FindByToken(FindByTokenGroupRequest) returns (FindByTokenGroupResponse) {}
  rpc Update(UpdateGroupRequest) returns (UpdateGroupResponse) {}
  rpc Join(JoinGroupRequest) returns (JoinGroupResponse) {}
  rpc DeleteMember(DeleteMemberGroupRequest) returns (DeleteMemberGroupResponse){}
  rpc Leave(LeaveGroupRequest) returns (LeaveGroupResponse){}
}

message Group{
  string id = 1;
  string leaderID = 2;
  string token = 3;
  repeated UserInfo members = 4;
}

message UserInfo {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string imageUrl = 4;
}

//Find One
message FindOneGroupRequest{
  string userId = 1;
}

message FindOneGroupResponse{
  Group group = 1;
}

// Find By Token

message FindByTokenGroupRequest{
  string token = 1;
}

message FindByTokenGroupResponse{
  string id = 1;
  string token = 2;
  UserInfo leader = 3;
}

// Update

message UpdateGroupRequest{
  Group group = 1;
  string leaderId = 2;
}

message UpdateGroupResponse{
  Group group = 1;
}

//Join

message JoinGroupRequest{
  string token = 1;
  string userId = 2;
}

message JoinGroupResponse{
  Group group = 1;
}

// Delete

message DeleteMemberGroupRequest{
  string userId = 1;
  string leaderId = 2;
}

message DeleteMemberGroupResponse{
  Group group = 1;
}

//Leave

message LeaveGroupRequest{
  string userId = 1;
}

message LeaveGroupResponse{
  Group group = 1;
}